--- a/index.html
+++ b/index.html
@@ -45,24 +45,36 @@
             <h2 class="qualities-title visually-hidden">Title section2</h2>
             <ul class="qualities-list list">
                 <li class="qualities-item">
+                    <svg class="qualities-svg" width="64" height="64"> 
+                        <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                    </svg>
                     <h3 class="qualities-item-title">Strategy</h3>
                     <p class="qualities-item-text">
                         Our goal is to identify the business problem to walk away with the perfect and creative solution. 
                     </p>
                 </li>
                 <li class="qualities-item">
+                    <svg class="qualities-svg" width="64" height="64"> 
+                        <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                    </svg>
                     <h3 class="qualities-item-title">Punctuality</h3>
                     <p class="qualities-item-text">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li class="qualities-item">
+                    <svg class="qualities-svg" width="64" height="64"> 
+                        <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                    </svg>
                     <h3 class="qualities-item-title">Diligence</h3>
                     <p class="qualities-item-text">
                         Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li class="qualities-item">
+                    <svg class="qualities-svg" width="64" height="64"> 
+                        <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                    </svg>
                     <h3 class="qualities-item-title">Technologies</h3>
                     <p class="qualities-item-text">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
