--- a/index.html
+++ b/index.html
@@ -45,36 +45,44 @@
             <h2 class="qualities-title visually-hidden">Title section2</h2>
             <ul class="qualities-list list">
                 <li class="qualities-item">
+                    <div class="qualities-svg-border">
                     <svg class="qualities-svg" width="64" height="64"> 
                         <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
                     </svg>
+                </div>
                     <h3 class="qualities-item-title">Strategy</h3>
                     <p class="qualities-item-text">
                         Our goal is to identify the business problem to walk away with the perfect and creative solution. 
                     </p>
                 </li>
                 <li class="qualities-item">
+                    <div class="qualities-svg-border">
                     <svg class="qualities-svg" width="64" height="64"> 
                         <use href="./images/symbol-defs.svg#icon-clock-1"></use>
                     </svg>
+                    </div>
                     <h3 class="qualities-item-title">Punctuality</h3>
                     <p class="qualities-item-text">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li class="qualities-item">
+                    <div class="qualities-svg-border">
                     <svg class="qualities-svg" width="64" height="64"> 
                         <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
                     </svg>
+                    </div>
                     <h3 class="qualities-item-title">Diligence</h3>
                     <p class="qualities-item-text">
                         Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li class="qualities-item">
+                    <div class="qualities-svg-border">
                     <svg class="qualities-svg" width="64" height="64"> 
                         <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
                     </svg>
+                    </div>
                     <h3 class="qualities-item-title">Technologies</h3>
                     <p class="qualities-item-text">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -102,6 +110,28 @@
                    <div class="name-job">
                         <h3 class="team-item-title">Mark Guerrero</h3>
                         <p class="team-item-text">Product Designer</p>
+                        <div class="team-svg-together">  
+                        <div class="team-svg-border"> 
+                        <svg class="team-svg" width="16" height="16"> 
+                            <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                        </svg>
+                    </div>
+                    <div class="team-svg-border"> 
+                        <svg class="team-svg" width="16" height="16"> 
+                            <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                        </svg>
+                    </div>
+                    <div class="team-svg-border"> 
+                        <svg class="team-svg" width="16" height="16"> 
+                            <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                        </svg>
+                    </div>
+                    <div class="team-svg-border"> 
+                        <svg class="team-svg" width="16" height="16"> 
+                            <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                        </svg>
+                    </div>
+                </div>
                    </div>
                 </li>
                 <li class="team-item">
@@ -109,6 +139,28 @@
                     <div class="name-job">
                         <h3 class="team-item-title">Tom Ford</h3>
                         <p class="team-item-text">Frontend Developer</p>
+                        <div class="team-svg-together">  
+                            <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                            </svg>
+                        </div>
+                        <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                            </svg>
+                        </div>
+                        <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                            </svg>
+                        </div>
+                        <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </div>
+                    </div>
                     </div>
                 </li>
                 <li class="team-item">
@@ -116,6 +168,28 @@
                     <div class="name-job">
                         <h3 class="team-item-title">Camila Garcia</h3>
                         <p class="team-item-text">Marketing</p>
+                        <div class="team-svg-together">  
+                            <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                            </svg>
+                        </div>
+                        <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                            </svg>
+                        </div>
+                        <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                            </svg>
+                        </div>
+                        <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </div>
+                    </div>
                     </div>
                 </li>
                 <li class="team-item">
@@ -123,18 +197,72 @@
                     <div class="name-job">
                         <h3 class="team-item-title">Daniel Wilson</h3>
                         <p class="team-item-text">UI Designer</p>
+                        <div class="team-svg-together">  
+                            <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                            </svg>
+                        </div>
+                        <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                            </svg>
+                        </div>
+                        <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                            </svg>
+                        </div>
+                        <div class="team-svg-border"> 
+                            <svg class="team-svg" width="16" height="16"> 
+                                <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </div>
+                    </div>
                     </div>
                 </li>
             </ul>
         </div>
     </section>
+    <section class="customers">
+        <div class="container"> 
+        <h2 class="title-customers">Customers</h2>
+    </div>
+    </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-together">
+        
+
+            <div class="footer-logo-text"> 
             <a class="footer-logo-link link" href="./index.html">Web<span class="studio-wight">Studio</span></a>
             <p class="footer-text">
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
+        </div>
+    <div class="title-media"> 
+            <p class="media-footer">Social media</p>
+            <div class="media-svg-border">
+            <svg class="media-svg" height="24" width="24">
+                <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+            </svg>
+        </div>
+        <div class="media-svg-border"> 
+            <svg class="media-svg" height="24" width="24">
+                <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+            </svg>
+        </div>
+        <div class="media-svg-border"> 
+            <svg class="media-svg" height="24" width="24">
+                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+            </svg>
+        </div>
+        <div class="media-svg-border"> 
+            <svg class="media-svg" height="24" width="24">
+                <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+            </svg>
+        </div>
+        </div>
         </div>
     </footer>   
 </body>
