--- a/index.html
+++ b/index.html
@@ -110,28 +110,52 @@
                    <div class="name-job">
                         <h3 class="team-item-title">Mark Guerrero</h3>
                         <p class="team-item-text">Product Designer</p>
-                        <div class="team-svg-together">  
-                        <div class="team-svg-border"> 
+                        <ul class="team-svg-together list">  
+                        <li class="team-svg-border"> 
+                            <a class="team-block-link link" 
+                            href="" 
+                            aria-label="instagram" 
+                            target="_blank" 
+                            rel="noopener noreferrer"> 
                         <svg class="team-svg" width="16" height="16"> 
                             <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
                         </svg>
-                    </div>
-                    <div class="team-svg-border"> 
+                    </a>
+                    </li>
+                    <li class="team-svg-border"> 
+                        <a class="team-block-link link" 
+                        href="" 
+                        aria-label="instagram" 
+                        target="_blank" 
+                        rel="noopener noreferrer"> 
                         <svg class="team-svg" width="16" height="16"> 
                             <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
                         </svg>
-                    </div>
-                    <div class="team-svg-border"> 
+                    </a>
+                    </li>
+                    <li class="team-svg-border"> 
+                        <a class="team-block-link link" 
+                        href="" 
+                        aria-label="instagram" 
+                        target="_blank" 
+                        rel="noopener noreferrer"> 
                         <svg class="team-svg" width="16" height="16"> 
                             <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
                         </svg>
-                    </div>
-                    <div class="team-svg-border"> 
+                    </a>
+                    </li>
+                    <li class="team-svg-border"> 
+                        <a class="team-block-link link" 
+                        href="" 
+                        aria-label="instagram" 
+                        target="_blank" 
+                        rel="noopener noreferrer">
                         <svg class="team-svg" width="16" height="16"> 
                             <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
                         </svg>
-                    </div>
-                </div>
+                    </a>
+                    </li>
+                </ul>
                    </div>
                 </li>
                 <li class="team-item">
@@ -139,28 +163,52 @@
                     <div class="name-job">
                         <h3 class="team-item-title">Tom Ford</h3>
                         <p class="team-item-text">Frontend Developer</p>
-                        <div class="team-svg-together">  
-                            <div class="team-svg-border"> 
+                        <ul class="team-svg-together list">  
+                            <li class="team-svg-border"> 
+                                <a class="team-block-link link" 
+                                href="" 
+                                aria-label="instagram" 
+                                target="_blank" 
+                                rel="noopener noreferrer"> 
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
                             </svg>
-                        </div>
-                        <div class="team-svg-border"> 
+                        </a>
+                        </li>
+                        <li class="team-svg-border"> 
+                            <a class="team-block-link link" 
+                            href="" 
+                            aria-label="instagram" 
+                            target="_blank" 
+                            rel="noopener noreferrer"> 
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
                             </svg>
-                        </div>
-                        <div class="team-svg-border"> 
+                        </a>
+                        </li>
+                        <li class="team-svg-border"> 
+                            <a class="team-block-link link" 
+                            href="" 
+                            aria-label="instagram" 
+                            target="_blank" 
+                            rel="noopener noreferrer"> 
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
                             </svg>
-                        </div>
-                        <div class="team-svg-border"> 
+                        </a>
+                        </li>
+                        <li class="team-svg-border"> 
+                            <a class="team-block-link link" 
+                            href="" 
+                            aria-label="instagram" 
+                            target="_blank" 
+                            rel="noopener noreferrer">
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
                             </svg>
-                        </div>
-                    </div>
+                        </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="team-item">
@@ -168,28 +216,52 @@
                     <div class="name-job">
                         <h3 class="team-item-title">Camila Garcia</h3>
                         <p class="team-item-text">Marketing</p>
-                        <div class="team-svg-together">  
-                            <div class="team-svg-border"> 
+                        <ul class="team-svg-together list">  
+                            <li class="team-svg-border"> 
+                                <a class="team-block-link link" 
+                                href="" 
+                                aria-label="instagram" 
+                                target="_blank" 
+                                rel="noopener noreferrer"> 
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
                             </svg>
-                        </div>
-                        <div class="team-svg-border"> 
+                        </a>
+                        </li>
+                        <li class="team-svg-border"> 
+                            <a class="team-block-link link" 
+                            href="" 
+                            aria-label="instagram" 
+                            target="_blank" 
+                            rel="noopener noreferrer"> 
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
                             </svg>
-                        </div>
-                        <div class="team-svg-border"> 
+                        </a>
+                        </li>
+                        <li class="team-svg-border"> 
+                            <a class="team-block-link link" 
+                            href="" 
+                            aria-label="instagram" 
+                            target="_blank" 
+                            rel="noopener noreferrer"> 
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
                             </svg>
-                        </div>
-                        <div class="team-svg-border"> 
+                        </a>
+                        </li>
+                        <li class="team-svg-border"> 
+                            <a class="team-block-link link" 
+                            href="" 
+                            aria-label="instagram" 
+                            target="_blank" 
+                            rel="noopener noreferrer">
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
                             </svg>
-                        </div>
-                    </div>
+                        </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="team-item">
@@ -197,28 +269,52 @@
                     <div class="name-job">
                         <h3 class="team-item-title">Daniel Wilson</h3>
                         <p class="team-item-text">UI Designer</p>
-                        <div class="team-svg-together">  
-                            <div class="team-svg-border"> 
+                        <ul class="team-svg-together list">  
+                            <li class="team-svg-border"> 
+                                <a class="team-block-link link" 
+                                href="" 
+                                aria-label="instagram" 
+                                target="_blank" 
+                                rel="noopener noreferrer"> 
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
                             </svg>
-                        </div>
-                        <div class="team-svg-border"> 
+                        </a>
+                        </li>
+                        <li class="team-svg-border"> 
+                            <a class="team-block-link link" 
+                            href="" 
+                            aria-label="instagram" 
+                            target="_blank" 
+                            rel="noopener noreferrer"> 
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
                             </svg>
-                        </div>
-                        <div class="team-svg-border"> 
+                        </a>
+                        </li>
+                        <li class="team-svg-border"> 
+                            <a class="team-block-link link" 
+                            href="" 
+                            aria-label="instagram" 
+                            target="_blank" 
+                            rel="noopener noreferrer"> 
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
                             </svg>
-                        </div>
-                        <div class="team-svg-border"> 
+                        </a>
+                        </li>
+                        <li class="team-svg-border"> 
+                            <a class="team-block-link link" 
+                            href="" 
+                            aria-label="instagram" 
+                            target="_blank" 
+                            rel="noopener noreferrer">
                             <svg class="team-svg" width="16" height="16"> 
                                 <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
                             </svg>
-                        </div>
-                    </div>
+                        </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
             </ul>
@@ -226,8 +322,57 @@
     </section>
     <section class="customers">
         <div class="container"> 
+
         <h2 class="title-customers">Customers</h2>
+    <ul class="customers-together list">
+           <li class="customers-svg-border">
+            <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer">
+                <svg class="customers-svg" width="104" height="56">
+                    <use href="./images/symbol-defs.svg#icon-Union"></use>
+                </svg>
+            </a>
+           </li>
+           <li class="customers-svg-border">
+            <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer"> 
+
+            <svg class="customers-svg" width="104" height="56">
+                <use href="./images/symbol-defs.svg#icon-Logo"></use>
+            </svg>
+        </a>
+       </li>
+       <li class="customers-svg-border">
+        <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer"> 
+        <svg class="customers-svg" width="104" height="56">
+            <use href="./images/symbol-defs.svg#icon-Object"></use>
+        </svg>
+    </a>
+    </li>
+    <li class="customers-svg-border">
+        <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer">
+        <svg class="customers-svg" width="104" height="56">
+            <use href="./images/symbol-defs.svg#icon-group"></use>
+        </svg>
+        </a>
+    </li>
+    <li class="customers-svg-border">
+        <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer"> 
+        <svg class="customers-svg" width="104" height="56">
+            <use href="./images/symbol-defs.svg#icon-group-1"></use>
+        </svg>
+    </a>
+    </li>
+    <li class="customers-svg-border">
+        <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer"> 
+
+        <svg class="customers-svg" width="104" height="56">
+            <use href="./images/symbol-defs.svg#icon-Object-1"></use>
+        </svg>
+        </a>
+    </li>
+    </ul>
+
     </div>
+
     </section>
     </main>
     <footer class="footer">
@@ -242,26 +387,36 @@
         </div>
     <div class="title-media"> 
             <p class="media-footer">Social media</p>
-            <div class="media-svg-border">
-            <svg class="media-svg" height="24" width="24">
-                <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
-            </svg>
-        </div>
-        <div class="media-svg-border"> 
-            <svg class="media-svg" height="24" width="24">
-                <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
-            </svg>
-        </div>
-        <div class="media-svg-border"> 
-            <svg class="media-svg" height="24" width="24">
-                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
-            </svg>
-        </div>
-        <div class="media-svg-border"> 
-            <svg class="media-svg" height="24" width="24">
-                <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
-            </svg>
-        </div>
+        <ul class="footer-socila-media">
+                <li class="media-svg-border">
+                    <a class="footer-block-link link" href="" aria-label="instagram" target="_blank" rel="noopener noreferrer"> 
+                <svg class="media-svg" height="24" width="24">
+                    <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                </svg>
+            </a>
+            </li>
+            <li class="media-svg-border"> 
+                <a class="footer-block-link link" href="" aria-label="instagram" target="_blank" rel="noopener noreferrer">
+                <svg class="media-svg" height="24" width="24">
+                    <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                </svg>
+            </a>
+            </li>
+            <li class="media-svg-border"> 
+                <a class="footer-block-link link" href="" aria-label="instagram" target="_blank" rel="noopener noreferrer"> 
+                <svg class="media-svg" height="24" width="24">
+                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                </svg>
+            </a>
+            </li>
+            <li class="media-svg-border"> 
+                <a class="footer-block-link link" href="" aria-label="instagram" target="_blank" rel="noopener noreferrer"> 
+                <svg class="media-svg" height="24" width="24">
+                    <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                </svg>
+            </a>
+            </li>
+        </ul>
         </div>
         </div>
     </footer>   
