--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,12 @@
      <ul class="service-list list">
             <li class="service-item"> 
                 <a class="service-list-link link" href="">
-                <img src="./images/img11.jpg" alt="Interface" width="360" height="300" />
+                <div class="text-over-img">
+                    <img src="./images/img11.jpg" alt="Interface" width="360" height="300" />
+                    <p class="text-over">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                 <div class="service-title-text">
                     <h2 class="service-item-title">Banking App Interface Concept</h2>
                     <p class="service-item-text">App</p>
@@ -57,7 +62,12 @@
             </li>
             <li class="service-item">
                 <a class="service-list-link link" href=""> 
-                <img src="./images/img12.jpg" alt="Cashless Payment" width="360" height="300" />
+                <div class="text-over-img">
+                    <img src="./images/img12.jpg" alt="Cashless Payment" width="360" height="300" />
+                    <p class="text-over">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                 <div class="service-title-text">
                     <h2 class="service-item-title">Cashless Payment</h2>
                     <p class="service-item-text">Marketing</p>
@@ -66,7 +76,12 @@
             </li>
             <li class="service-item">
                 <a class="service-list-link link" href="">
-                <img src="./images/img13.jpg" alt="Meditation App" width="360" height="300" />
+                <div class="text-over-img">
+                    <img src="./images/img13.jpg" alt="Meditation App" width="360" height="300" />
+                    <p class="text-over">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                 <div class="service-title-text">
                     <h2 class="service-item-title">Meditation App</h2>
                     <p class="service-item-text">App</p>
@@ -75,7 +90,12 @@
             </li>
             <li class="service-item">
                 <a class="service-list-link link" href="">
-                <img src="./images/img14.jpg" alt="Taxi Service" width="360" height="300" />
+                <div class="text-over-img">
+                    <img src="./images/img14.jpg" alt="Taxi Service" width="360" height="300" />
+                    <p class="text-over">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                 <div class="service-title-text">
                     <h2 class="service-item-title">Taxi Service</h2>
                     <p class="service-item-text">Marketing</p>
@@ -84,7 +104,12 @@
             </li>
             <li class="service-item"> 
                 <a class="service-list-link link" href="">
-                <img src="./images/img15.jpg" alt="Screen Illustrations" width="360" height="300" />
+                <div class="text-over-img">
+                    <img src="./images/img15.jpg" alt="Screen Illustrations" width="360" height="300" />
+                    <p class="text-over">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                <div class="service-title-text">
                     <h2 class="service-item-title">Screen Illustrations</h2>
                     <p class="service-item-text">Design</p>
@@ -93,7 +118,12 @@
             </li>
             <li class="service-item">
                 <a class="service-list-link link" href=""> 
-                <img src="./images/img16.jpg" alt="Online Courses" width="360" height="300" />
+                <div class="text-over-img">
+                    <img src="./images/img16.jpg" alt="Online Courses" width="360" height="300" />
+                    <p class="text-over">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                <div class="service-title-text">
                     <h2 class="service-item-title">Online Courses</h2>
                     <p class="service-item-text">Marketing</p>
@@ -102,7 +132,12 @@
             </li>
             <li class="service-item">
                 <a class="service-list-link link" href="">
-                <img src="./images/img17.jpg" alt="Stories Concept" width="360" height="300" />
+                <div class="text-over-img">
+                    <img src="./images/img17.jpg" alt="Stories Concept" width="360" height="300" />
+                    <p class="text-over">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
              <div class="service-title-text">
                     <h2 class="service-item-title">Instagram Stories Concept</h2>
                     <p class="service-item-text">Design</p>
@@ -111,7 +146,12 @@
             </li>
             <li class="service-item">
                 <a class="service-list-link link" href="">
-                <img src="./images/img18.jpg" alt="Organic Food" width="360" height="300" />
+                <div class="text-over-img">
+                    <img src="./images/img18.jpg" alt="Organic Food" width="360" height="300" />
+                    <p class="text-over">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                 <div class="service-title-text">
                     <h2 class="service-item-title">Organic Food</h2>
                     <p class="service-item-text">Web Site</p>
@@ -120,7 +160,12 @@
             </li>
             <li class="service-item">
                 <a class="service-list-link link" href="">
-                <img src="./images/img19.jpg" alt="Coffee" width="360" height="300" />
+                <div class="text-over-img">
+                    <img src="./images/img19.jpg" alt="Coffee" width="360" height="300" />
+                    <p class="text-over">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
                 <div class="service-title-text">
                     <h2 class="service-item-title">Fresh Coffee</h2>
                     <p class="service-item-text">Web Site</p>
