--- a/index.html
+++ b/index.html
@@ -419,6 +419,13 @@
         </ul>
         </div>
         </div>
-    </footer>   
+    </footer> 
+    <div class="backdrop">
+    <div class="modal">
+        <button type="button"><symbol id="icon-close-black-18dp-2-1-1" viewBox="0 0 32 32">
+            <path d="M32 3.224l-3.224-3.224-12.776 12.776-12.776-12.776-3.224 3.224 12.776 12.776-12.776 12.776 3.224 3.224 12.776-12.776 12.776 12.776 3.224-3.224-12.776-12.776 12.776-12.776z"></path>
+            </symbol></button>
+    </div>
+    </div>
 </body>
 </html>
