--- a/portfolio.html
+++ b/portfolio.html
@@ -178,11 +178,48 @@
 
 </main>
 <footer class="footer">
-    <div class="container">
+    <div class="container footer-together">
+        
+
+        <div class="footer-logo-text"> 
         <a class="footer-logo-link link" href="./index.html">Web<span class="studio-wight">Studio</span></a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
+    </div>
+<div class="title-media"> 
+        <p class="media-footer">Social media</p>
+    <ul class="footer-socila-media">
+            <li class="media-svg-border">
+                <a class="footer-block-link link" href="" aria-label="instagram" target="_blank" rel="noopener noreferrer"> 
+            <svg class="media-svg" height="24" width="24">
+                <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+            </svg>
+        </a>
+        </li>
+        <li class="media-svg-border"> 
+            <a class="footer-block-link link" href="" aria-label="instagram" target="_blank" rel="noopener noreferrer">
+            <svg class="media-svg" height="24" width="24">
+                <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+            </svg>
+        </a>
+        </li>
+        <li class="media-svg-border"> 
+            <a class="footer-block-link link" href="" aria-label="instagram" target="_blank" rel="noopener noreferrer"> 
+            <svg class="media-svg" height="24" width="24">
+                <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+            </svg>
+        </a>
+        </li>
+        <li class="media-svg-border"> 
+            <a class="footer-block-link link" href="" aria-label="instagram" target="_blank" rel="noopener noreferrer"> 
+            <svg class="media-svg" height="24" width="24">
+                <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+            </svg>
+        </a>
+        </li>
+    </ul>
+    </div>
     </div>
 </footer>   
 </body>
