--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <nav class="header">
           <a class="header-logo-link link" href="./index.html">Web<span class="studio">Studio</span></a>
           <ul class="header-list list">
-              <li class="header-item"><a class="header-item-menu link" href="./index.html">Studio</a></li>
+              <li class="header-item"><a class="header-item-menu link current" href="./index.html">Studio</a></li>
               <li class="header-item"><a class="header-item-menu link" href="./portfolio.html">Portfolio</a></li>
               <li class="header-item"><a class="header-item-menu link" href="">Contacts</a></li>
           </ul>
