--- a/portfolio.html
+++ b/portfolio.html
@@ -189,7 +189,7 @@
     </div>
 <div class="title-media"> 
         <p class="media-footer">Social media</p>
-    <ul class="footer-socila-media">
+    <ul class="footer-socila-media list">
             <li class="media-svg-border">
                 <a class="footer-block-link link" href="" aria-label="instagram" target="_blank" rel="noopener noreferrer"> 
             <svg class="media-svg" height="24" width="24">
