--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
            <li class="customers-svg-border">
             <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer">
                 <svg class="customers-svg" width="104" height="56">
-                    <use href="./images/symbol-defs.svg#icon-Union"></use>
+                    <use href="./images/symbol-defs.svg#icon-Logo"></use>
                 </svg>
             </a>
            </li>
@@ -336,28 +336,28 @@
             <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer"> 
 
             <svg class="customers-svg" width="104" height="56">
-                <use href="./images/symbol-defs.svg#icon-Logo"></use>
+                <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
             </svg>
         </a>
        </li>
        <li class="customers-svg-border">
         <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer"> 
         <svg class="customers-svg" width="104" height="56">
-            <use href="./images/symbol-defs.svg#icon-Object"></use>
+            <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
         </svg>
     </a>
     </li>
     <li class="customers-svg-border">
         <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer">
         <svg class="customers-svg" width="104" height="56">
-            <use href="./images/symbol-defs.svg#icon-group"></use>
+            <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
         </svg>
         </a>
     </li>
     <li class="customers-svg-border">
         <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer"> 
         <svg class="customers-svg" width="104" height="56">
-            <use href="./images/symbol-defs.svg#icon-group-1"></use>
+            <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
         </svg>
     </a>
     </li>
@@ -365,7 +365,7 @@
         <a class="customers-link link" href="" aria-label="Logo" target="_blank" rel="noopener noreferrer"> 
 
         <svg class="customers-svg" width="104" height="56">
-            <use href="./images/symbol-defs.svg#icon-Object-1"></use>
+            <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
         </svg>
         </a>
     </li>
@@ -387,7 +387,7 @@
         </div>
     <div class="title-media"> 
             <p class="media-footer">Social media</p>
-        <ul class="footer-socila-media">
+        <ul class="footer-socila-media list">
                 <li class="media-svg-border">
                     <a class="footer-block-link link" href="" aria-label="instagram" target="_blank" rel="noopener noreferrer"> 
                 <svg class="media-svg" height="24" width="24">
